Actually updated app info in Cargo

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "app"
+name = "GridClicker"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "Overlay over any application and click a grid on them."
+authors = ["Cody Nhan Pham"]
+license = "MIT"
+repository = "https://github.com/codynhanpham/grid_clicker"
 edition = "2021"
 rust-version = "1.77.2"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-name = "app_lib"
+name = "grid_clicker_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
