--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 enigo = "0.5.0"
 log = "0.4"
-tauri = { version = "2.5.0", features = ["devtools"] }
+tauri = { version = "2.5.0", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-store = "2"
 
